Fix T47379: crash appending materials with node trees.